@@ -111,7 +111,7 @@ bool SVGPaintServerRadialGradient:: setup(GraphicsContext*& context, const Rende
         fillColorArray(gradient, gradientStops(), opacity);
 
         QBrush brush(gradient);
-        brush.setTransform(QTransform(gradientTransform()));
+        brush.setMatrix(gradientTransform());
 
         painter->setBrush(brush);
         context->setFillRule(renderStyle->svgStyle()->fillRule());
@@ -122,7 +122,7 @@ bool SVGPaintServerRadialGradient:: setup(GraphicsContext*& context, const Rende
 
         QPen pen;
         QBrush brush(gradient);
-        brush.setTransform(QTransform(gradientTransform()));
+        brush.setMatrix(gradientTransform());
 
         setPenProperties(object, renderStyle, pen);
         pen.setBrush(brush);
